--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,8 +3,8 @@
 }
 
 .main {
-  min-height: 100vh;
-  padding: 4rem 0;
+  min-height: 80vh;
+  padding: 0;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -40,9 +40,9 @@
 }
 
 .title {
-  margin: 0;
+  margin: 0 0 2rem 0;
   line-height: 1.15;
-  font-size: 4rem;
+  font-size: 2rem;
 }
 
 .title,
@@ -82,6 +82,7 @@
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
+  min-width: 260px;
   max-width: 300px;
 }
 
@@ -94,12 +95,12 @@
 
 .card h2 {
   margin: 0 0 1rem 0;
-  font-size: 1.5rem;
+  font-size: 1.1rem;
 }
 
 .card p {
   margin: 0;
-  font-size: 1.25rem;
+  font-size: 0.9rem;
   line-height: 1.5;
 }
 
